Fix long titles being cut off. Remove Season premiere slider.

--- a/src/UI/Calendar/calendar.less
+++ b/src/UI/Calendar/calendar.less
@@ -44,6 +44,10 @@
 		opacity : 0.8;
 	}
 
+	.fc-title {
+		white-space: normal;
+	}
+
 	.fc-list-table {
 		.past {
 			opacity: 1.0;
